src/test/resources/failing/fail69.pnd
Foo(x) : string
@text Foo(x) <- foo x ok
Bar(x) : string
@text Bar(y) <- foo x notOk y